# free-chr

./: .gitignore  README.md  free-chr.cabal
.github/workflows/: haskell-ci.yml
examples/CHR/Examples/FiniteDomain/: EnumConstraints.hs  WaveFunctionCollapse.hs
examples/CHR/Examples/FiniteDomain/WaveFunctionCollapse/: Generator.hs  Instances.hs  Tile.hs
examples/CHR/Examples/Generic/: FiniteDomain.hs  Identity.hs  List.hs  Writer.hs
src/: CHR.hs
src/CHR/: Helpers.hs
src/CHR/FiniteDomain/: Constraints.hs  Default.hs  Helpers.hs  Solver.hs  State.hs
src/CHR/Generic/: Default.hs  Helpers.hs  Solver.hs
test/CHR/: FiniteDomainSpec.hs  GenericSpec.hs
