cabal-version: 3.0

name:           free-chr
version:        0.1.0.0
synopsis:       Free-CHR implementation in Haskell
category:       Language
author:         Sascha Rechenberger
maintainer:     sascha.rechenberger@uni-ulm.de
copyright:      2022 Sascha Rechenberger
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC == {9.2.8,9.4.5,9.6.2}
description:
  An implementation of Constraint Handling Rules (CHR) in Haskell, using the FreeCHR framework.

source-repository head
  type:     git
  location: https://github.com/noughtmare/free-chr

common common
  default-extensions: TypeFamilies, DerivingStrategies
  default-language:   GHC2021
  build-depends:
    base ^>= {4.16,4.17,4.18},
    mtl ^>= {2.2,2.3},
  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-implicit-prelude
    -- TODO remove these:
    -Wno-incomplete-uni-patterns

library
  import: common
  build-depends:
    extra ^>= 1.7,
    containers ^>= 0.6,
    optics ^>= 0.4,
  hs-source-dirs: src
  exposed-modules:
    CHR
    CHR.FiniteDomain
    CHR.FiniteDomain.Constraints
    CHR.FiniteDomain.Default
    CHR.FiniteDomain.Helpers
    CHR.FiniteDomain.Solver
    CHR.FiniteDomain.State
    CHR.Generic.Default
    CHR.Generic.Helpers
    CHR.Generic.Solver
    CHR.Helpers

library free-chr-generic
  import: common
  hs-source-dirs: examples
  build-depends: free-chr
  exposed-modules:
    CHR.Examples.Generic.FiniteDomain
    CHR.Examples.Generic.Identity
    CHR.Examples.Generic.List
    CHR.Examples.Generic.Writer

library free-chr-finite-domain
  import: common
  hs-source-dirs: examples
  build-depends:
    free-chr,
    MonadRandom ^>= 0.6,
    random-shuffle ^>= 0.0,
    containers ^>= 0.6,
    optics ^>= 0.4,
  exposed-modules:
    CHR.Examples.FiniteDomain.EnumConstraints
    CHR.Examples.FiniteDomain.WaveFunctionCollapse
    CHR.Examples.FiniteDomain.WaveFunctionCollapse.Generator
    CHR.Examples.FiniteDomain.WaveFunctionCollapse.Instances
    CHR.Examples.FiniteDomain.WaveFunctionCollapse.Tile

test-suite free-chr-test
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    CHR.FiniteDomainSpec
    CHR.GenericSpec
  hs-source-dirs: test
  build-depends:
    HUnit ^>= 1.6,
    QuickCheck ^>= 2.14,
    hspec ^>= 2.11,
    containers ^>= 0.6,
    optics ^>= 0.4,
    MonadRandom ^>= 0.6,
    free-chr,
    free-chr-generic,
    free-chr-finite-domain
